--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 language: java
-jdk:
-  - oraclejdk13
 deploy:
   provider: heroku
   api-key:
     secure: $HEROKU_API_KEY
-  app: peerassessmenttool-jora
+  app: -jorapeerassessmenttool
