--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: java
 deploy:
   provider: heroku
   api-key:
-    secure: $HEROKU_API_KEY
+    secure: 4234bc0e-64b0-4ae2-b139-a28b6f372510
   app: -jorapeerassessmenttool
