--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: java
 deploy:
   provider: heroku
-  api-key:
-    secure: 4234bc0e-64b0-4ae2-b139-a28b6f372510
+  api_key:
+    secure: $HEROKU_API_KEY
   app: -jorapeerassessmenttool
