--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.driver-class=com.mysql.jdbc.Driver;
 spring.datasource.url=jdbc:mysql://localhost:3306/jora
 spring.datasource.username=root
 spring.datasource.password=password
+server.port=8081
